--- a/css/styles.css
+++ b/css/styles.css
@@ -402,7 +402,65 @@ transform: scale(1.05);
     object-fit: cover;
     object-position: top;
   }
+  /* * * * * email * * * * * * * * */
+/* Fondo oscuro del popup */
+#popup-form {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
   
+}
+
+/* Contenido del popup */
+/* Fondo oscuro del popup */
+#popup-form {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Contenido del popup */
+.popup-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 400px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  position: relative;
+}
+
+/* Botón de cerrar */
+.popup-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+/* Oculto al inicio */
+.popup-hidden {
+  display: none !important;
+}
+ /********************************/
+
+
+
+
   /* Animación de revelado horizontal */
   @keyframes revelarDeDerecha {
     0% {
